--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -16,7 +16,7 @@ jobs:
           node-version: 16.x
           cache: yarn
       - name: Build website
-        working-directory: website
+        working-directory: .
         run: |
           yarn install --frozen-lockfile
           yarn build
